--- a/source/pug/material.pug
+++ b/source/pug/material.pug
@@ -35,22 +35,25 @@ html(lang="es")
                             
                             .card-body
 
-                                ul.list-group.list-group-flush.list.my-n3.nav-temas
-                                    +navTemaItem('play', 'Introducción', '#introduccion')
-                                    +navTemaItem('1', 'Normativa vigente proceso ECCL', '#tema-1')
-                                    +navTemaItem('question', 'Actividad didáctica', '#evaluacion')
+                                ul.list-group.list-group-flush.list.my-n3.nav-temas        
+                                    +navTemaItem('1', 'Habilidades propias aplicadas en la atención humanizada', '#tema-1')
+                                    +navTemaItem('question', 'Actividad didáctica', '#evaluacion-1')
+                                    +navTemaItem('2', 'Atención humanizada', '#tema-2')
+                                    +navTemaItem('question', 'Actividad didáctica', '#evaluacion-2')
                                     +navTemaItem('glosary', 'Glosario', '#glosario')
                                     +navTemaItem('folder', 'Material complementario', '#anexos')
                                     +navTemaItem('references', 'Referencias bibliográficas', '#referencias')
 
 
         section#mainContent         
-            #introduccion
-                include pages/introduccion.pug
             #tema-1
-                include pages/1-tema.pug
-            #evaluacion
-                include pages/actividad-1.pug
+                include pages/tema_1.pug    
+            #evaluacion-1
+                include pages/actividad-1.pug     
+            #tema-1
+                include pages/tema_2.pug
+            #evaluacion-2
+                include pages/actividad-2.pug
             #glosario
                 include pages/glosario.pug
             #anexos
