--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -154,7 +154,10 @@ mixin creditosFooter(ruta)
                         | #[strong Martha Isabel Martínez Vargas]<br/>     
                         span.text-small Corrección de estilo<br/>
                     p.footer-texto
-                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura - Regional Santander
+                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura 
+                        br
+                        span.text-small Regional Santader  
+                       
                        
                 .col-12.col-md-5
                     h4.footer-subtitulo-2.mt-0 
@@ -184,7 +187,21 @@ mixin creditosFooter(ruta)
                     p.footer-texto
                         span.text-small.text-uppercase CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA   
                         br
-                        span.text-small Regional Santander                  
+                        span.text-small Regional Santander    
+
+                    h4.footer-subtitulo-2.mt-0 
+                        .fa.fa-caret-right.mr-2
+                        | Gestores de repositorio
+                        
+                    p.footer-texto   
+                        | #[strong Andres Camilo Penagos Beltran]<br/> 
+                        | #[strong Milady Tatiana Villamil Castellanos]<br/> 
+                        | #[strong Wilmer Alonso Rincón Zuluaga]<br/>        
+                        span.text-small Validación de recursos<br/>
+                    p.footer-texto
+                        span.text-small.text-uppercase CENTRO DE COMERCIO Y SERVICIOS   
+                        br
+                        span.text-small Regional Tolima              
 
                    
 
