--- a/source/pug/pages/referencias.pug
+++ b/source/pug/pages/referencias.pug
@@ -6,13 +6,16 @@ include ../mixins/functions
         h1 Referencias bibliográficas
 
     .jumbotron.bg-white.referencias
-        +referenciaItem("Brusco A. 1998, Humanización de la Asistencia al Enfermo. Sal Terrae Cuadernos del Centro de Humanización de la Salud, pág. 86-90.", "")
-        +referenciaItem("Instituto Internacional de Planeamiento de la Educación, Ministerio de Educación de la Nación, 2000. Trabajo en Equipo, Modulo 09 Competencias para la profesionalización de la gestión educativa Diez módulos destinados a los responsables de los procesos de transformación educativa. pág. 6-9.", "")
-        +referenciaItem("Goleman, D. (1995). Inteligencia Emocional. Por qué es más importante que el cociente intelectual: Barcelona (España). Ediciones B, S.A.", "")
-        +referenciaItem("Pérez J., 2016. Humanización en la prestación de los servicios de salud.  Material de formación SENA. Estrategias para humanizar los servicios de salud de acuerdo con herramientas de comunicación, manejo de conflictos y solución de problemas, SENA.", "")  
-        +referenciaItem("Sánchez P. J. 2016. Programa Técnicas de comunicación en el nivel administrativo. Material de formación. 1: La Comunicación. SENA.", "") 
-        +referenciaItem("Toro, L. Y., 2015, La importancia del trabajo en equipo en las organizaciones, pág. 10-22.", "") 
-        +referenciaItem("Material de formación SENA: Humanización en la prestación de los servicios de salud, Estrategias para humanizar los servicios de salud de acuerdo con herramientas de comunicación, manejo de conflictos y solución de problemas.", "") 
+        +referenciaItem("Brusco A. (1998). Humanización de la Asistencia al Enfermo. Sal Terrae Cuadernos del Centro de Humanización de la Salud, pág. 86-90.", "")
+        +referenciaItem("Goleman, D. (1995). Inteligencia Emocional. Por qué es más importante que el cociente intelectual: Barcelona, España. Ediciones B, S.A.", "")
+        +referenciaItem("Instituto Internacional de Planeamiento de la Educación. (2000). Trabajo en Equipo, Módulo 09. Competencias para la profesionalización de la gestión educativa: diez módulos destinados a los responsables de los procesos de transformación educativa. pág. 6-9.", "")
+        +referenciaItem("Pérez Carreño J.G. (2016). Humanización en la prestación de los servicios de salud.  Material de formación SENA. Estrategias para humanizar los servicios de salud de acuerdo con herramientas de comunicación, manejo de conflictos y solución de problemas, SENA.", "")        
+        +referenciaItem("Sánchez Pizarro J. H. (2016). Programa Técnicas de comunicación en el nivel administrativo. Material de formación. 1: La Comunicación. SENA", "")  
+        +referenciaItem("Toro Suarez L. Y. (2015). La importancia del trabajo en equipo en las organizaciones. Universidad Militar Nueva Granada.", "") 
+        +referenciaItem("Vargas Trepaud, R. (2005). Proyecto de vida y planeamiento estratégico personal, Lima Perú. ", "") 
+        
+        
+         
         
 
         .row.justify-content-between.align-items-center
