--- a/source/pug/pages/actividad-1.pug
+++ b/source/pug/pages/actividad-1.pug
@@ -9,7 +9,7 @@
             figure
                 img(src="assets/images/pages/actividad/img_actividad.svg", alt="")
         
-        .col-12.col-md-6
+        .col-12.col-lg-6
             hr.line-100.bg-orange
             .text-center.p-2
                 h2 ¿Y su motivación es?  
