--- a/source/pug/pages/tema_2.pug
+++ b/source/pug/pages/tema_2.pug
@@ -7,7 +7,7 @@
       .row
         .col-12
           .header-ecored.mt-3#tema2_1
-            h2 2.1 Sentido de Vida     
+            h2 2.1 Sentido de vida     
       .row
         .col-12
           p Como se ha mencionado con anterioridad, las relaciones personales, de autorreconocimiento, las aptitudes personales, están entrecruzadas constantemente con la forma en que interactuamos.
@@ -20,7 +20,7 @@
       .row
         .col-12
           p Cuando el sentido de vida se encuentra alineado directamente con el papel o labor desempeñada a diario, existe mayor posibilidad de establecer metas comunes y cumplirlas, trabajar por el bien propio y común, generando impactos positivos, con mayor recordación y ofreciendo una respuesta comprometida con la vida misma. Es importante resaltar que, en el caso de personal de atención en salud, el bienestar propio significa en consecuencia el bienestar de otros, dado la naturaleza de la labor orientada hacia el servicio. En este sentido, las orientaciones de vida hacia el respeto y dignidad humana deben ser pilares fundamentales en el proyecto de superación propio o personal, profesional y familiar.
-          p El planteamiento personal puede #[strong encontrar su fundamento en la necesidad que tiene cada persona de encontrar un sentido a su propia existencia]. No es la vida la que nos entrega ese significado, sino que precisamente cada persona tiene el enorme #[strong desafío de encontrarlo frente a su propia existencia]. 
+          p #[strong El planteamiento personal puede encontrar su fundamento en la necesidad que tiene cada persona de encontrar un sentido a su propia existencia. No es la vida la que nos entrega ese significado, sino que precisamente cada persona tiene el enorme desafío de encontrarlo frente a su propia existencia]. 
 
       .row.justify-content-center.align-items-center.my-5 
         .col-12.col-lg-8.d-flex.justify-content-center
@@ -29,7 +29,7 @@
       .row
         .col-12
           p Con las decisiones y las acciones que adoptemos y realicemos, configura un revelador sentido de vida. #[strong La vida nos interpela, nos cuestiona y nos desafía] en cada instante de nuestra existencia para que le demos respuesta.
-          p El sentido de vida que demos, orienta a entender la razón de la existencia, para qué vivimos y cuál es el propósito de la vida, este último, forma parte del proceso de crecimiento personal, para el cual, cada ser humano puede contar con las condiciones de #[strong diseñar su propio futuro] y encontrar su sentido.
+          p El sentido que le damos a nuestras acciones y planes, permite orientarnos hacia entender la razón de nuestra existencia, para qué vivimos y cuál es el propósito, este último, forma parte fundamental del proceso de crecimiento personal que cada ser humano debe explorar para #[strong diseñar su propio futuro.] 
 
     .jumbotron.bg-white
       .row
@@ -38,7 +38,7 @@
             h2 2.2 Relación interpersonal (personal de la salud - persona y su red de apoyo - organización)
       .row
         .col-12
-          p Desde la Humanización tenemos el privilegio de abordar las relaciones interpersonales, las cuales se establecen entre persona y persona o por grupos de personas, estas relaciones se generan para compartir información, comunicación, transmitir emociones, compartir decisiones o prácticas, o en este caso para ayudar y servir a otros, que es el quehacer diario de la atención humanizada en salud. 
+          p Desde la humanización tenemos el privilegio de abordar las relaciones interpersonales, las cuales se establecen entre persona y persona o por grupos de personas, estas relaciones se generan para compartir información, comunicación, transmitir emociones, compartir decisiones o prácticas, o en este caso para ayudar y servir a otros, que es el quehacer diario de la atención humanizada en salud. 
       .row.justify-content-center.align-items-center.my-5 
         .col-12.col-lg-10.d-flex.justify-content-center
           img(src="assets/images/pages/tema_2/info_01.svg", alt="").img-fluid
@@ -54,21 +54,21 @@
               .list__item__icon
                 img(src="assets/images/icons/icon_duoble_chevron.svg", alt="")
             .list__txt
-              p.mb-0 #[strong Objetividad:] Es la capacidad de salirse de sí mismo y alcanzar puntos en común con la otra persona.    
+              p.mb-0 #[strong Objetividad:] es la capacidad de salirse de sí mismo y alcanzar puntos en común con la otra persona.    
         .col-12.mb-3
           .list
             .list__item
               .list__item__icon
                 img(src="assets/images/icons/icon_duoble_chevron.svg", alt="")
             .list__txt
-              p.mb-0 #[strong Respeto:] Es el reconocimiento del otro.   
+              p.mb-0 #[strong Respeto:] es el reconocimiento del otro.   
         .col-12.mb-3
           .list
             .list__item
               .list__item__icon
                 img(src="assets/images/icons/icon_duoble_chevron.svg", alt="")
             .list__txt
-              p.mb-0 #[strong Tolerancia:] Es la capacidad de entender pensamientos y acciones estando en desacuerdo.
+              p.mb-0 #[strong Tolerancia:] es la capacidad de entender pensamientos y acciones estando en desacuerdo.
 
       .row.justify-content-center.align-items-center.my-5 
         .col-12.col-lg-10.d-flex.justify-content-center
@@ -129,13 +129,13 @@
       .row.justify-content-center.align-items-center.my-5        
         .col-12.col-lg-6
           p #[strong Recurso clave]
-          p Para complementar las habilidades para la atención humanizada, le recomiendo revisar la charla a continuación #[strong Humanización de los Servicios de Salud en tiempos de pandemia del Covid-19], a cargo de la dra. Carol Bernal, Fonoaudióloga, Magíster en Discapacidad e Inclusión Social, candidata a doctora Salud Pública y Secretaria General de la Asociación Colombiana de Salud Pública. Disfrútenla.      
+          p Para complementar las habilidades para la atención humanizada, le recomiendo revisar la charla a continuación #[strong humanización de los Servicios de Salud en tiempos de pandemia del Covid-19], a cargo de la dra. Carol Bernal, Fonoaudióloga, Magíster en Discapacidad e Inclusión Social, candidata a doctora Salud Pública y Secretaria General de la Asociación Colombiana de Salud Pública. Disfrútenla.      
           .media_link
-            a(href="https://www.instagram.com/tv/CCpGA2sgv-N/?igshid=17q5p6wmwr950 ", target="_blank")
+            a(href="https://youtu.be/rS6HN01ZY8Y", target="_blank")
               .media_link__icon
                 img(src="assets/images/icons/icon_www.svg", alt="")
               .media_link__txt
-                p #[strong Humanización de los Servicios de Salud en tiempos de pandemia del Covid-19.] 
+                p #[strong Humanización de los servicios de salud en tiempos de pandemia del Covid-19.] 
 
         .col-12.col-md-4.d-flex.justify-content-center
           img(src="assets/images/pages/tema_2/img_04.svg", alt="" style="max-width:300px;").img-fluid 
